--- a/azure-pipelines.sds.pr-release.yml
+++ b/azure-pipelines.sds.pr-release.yml
@@ -5,7 +5,7 @@ resources:
     - repository: azTemplates
       type: github
       name: hmcts/azure-devops-templates
-      ref: feature/vh-tests-inside-a-container
+      ref: master
       endpoint: hmcts
 
 trigger: none
@@ -34,14 +34,14 @@ stages:
               chartPath: ${{ variables.chartPath }}
               chartValuesPath: ${{ variables.chartPath }}
 
-      - job: UnitTests
-        displayName: "Unit Tests"
+      - job: UnitAndIntegrationTests
+        displayName: "Unit and Integration Tests"
         steps:
           - checkout: self
 
-          - template: stages\dotnet-tests\unit-and-integration-tests-container.yml
+          - template: stages\dotnet-tests\unit-and-integration-tests-container.yml@azTemplates
             parameters:
-              nugetConfigPath: nuget.sds.config
+              nugetConfigPath: nuget.sds.config # remove this once the sds config file is removed
               appName: ${{ variables.appName }}
               dockerComposeTestFile: docker-compose.tests.yml
 
