--- a/variables/shared.yaml
+++ b/variables/shared.yaml
@@ -4,26 +4,25 @@ parameters:
     default: ""
   - name: prNumber
     type: string
-    default: ''
+    default: ""
 
 variables:
-  - group: Sonar-Poc
   - name: appName
     value: UserApi
 
   - name: nuget_org_name
-    value: 'Video Hearings/vh-packages'
+    value: "Video Hearings/vh-packages"
   - name: nuget_feed_name
-    value: 'vh-packages'
+    value: "vh-packages"
   - name: git_version_config_path
     value: $(Build.SourcesDirectory)/sds-git-version-config.yml
   - name: nuget_package_name
-    value: 'UserApi.Client'
+    value: "UserApi.Client"
 
   - name: git_repo_name
-    value: 'user-api'
+    value: "user-api"
   - name: sonar_exclusion
-    value: '**/UserApi.Contract/**,**/UserApi.API/Program.cs, **/UserApi.API/Startup.cs, **/UserApi.API/Extensions/**, **/UserApi.API/Swagger/**, **/UserApi.API/ConfigureServicesExtensions.cs, **/Testing.Common/**, **/UserApi.Common/**, **/UserApi.DAL/Mappings/**, **/UserApi.DAL/SeedData/**, **/UserApi.DAL/UserApiDbContext.cs, **/UserApi.DAL/**/DesignTimeHearingsContextFactory.cs, UserApi.DAL/Migrations/**, **/UserApi.Domain/Ddd/**, **/UserApi.DAL/Commands/Core/**, **/UserApi.DAL/Queries/Core/**, **/Testing.Common/**, **/UserApi.DAL/Migrations/*, **/UserApi.DAL/Migrations/**, **/Migrations/*'
+    value: "**/UserApi.Contract/**,**/UserApi.API/Program.cs, **/UserApi.API/Startup.cs, **/UserApi.API/Extensions/**, **/UserApi.API/Swagger/**, **/UserApi.API/ConfigureServicesExtensions.cs, **/Testing.Common/**, **/UserApi.Common/**, **/UserApi.DAL/Mappings/**, **/UserApi.DAL/SeedData/**, **/UserApi.DAL/UserApiDbContext.cs, **/UserApi.DAL/**/DesignTimeHearingsContextFactory.cs, UserApi.DAL/Migrations/**, **/UserApi.Domain/Ddd/**, **/UserApi.DAL/Commands/Core/**, **/UserApi.DAL/Queries/Core/**, **/Testing.Common/**, **/UserApi.DAL/Migrations/*, **/UserApi.DAL/Migrations/**, **/Migrations/*"
 
   - name: prNumber
     ${{ if eq(parameters.prNumber, '')}}:
@@ -31,30 +30,29 @@ variables:
     ${{ else }}:
       value: ${{ parameters.prNumber }}
   - name: prTagPrefix
-    value: 'pr-${{ variables.prNumber }}'
+    value: "pr-${{ variables.prNumber }}"
   - name: prTagName
-    value: '${{ variables.prTagPrefix }}-$(Build.BuildNumber)'
+    value: "${{ variables.prTagPrefix }}-$(Build.BuildNumber)"
 
   - name: imageName
     value: "${{ replace(variables.git_repo_name, '-', '') }}"
   - name: subscriptionName
     value: "DTS-SHAREDSERVICES-${{ upper(parameters.env) }}-Video Hearings"
   - name: acrSubscription
-    value: 'DTS-SHAREDSERVICES-PROD-Video Hearings'
+    value: "DTS-SHAREDSERVICES-PROD-Video Hearings"
   - name: acrName
-    value: 'sdshmctspublic'
+    value: "sdshmctspublic"
   - name: repositoryName
-    value: 'vh/${{ variables.git_repo_name }}'
+    value: "vh/${{ variables.git_repo_name }}"
   - name: gitRepoName
     value: vh-${{ variables.git_repo_name }}
-
 
   - name: chartName
     value: "vh-${{ variables.git_repo_name }}"
   - name: chartRepoPath
-    value: '$(Build.SourcesDirectory)/'
+    value: "$(Build.SourcesDirectory)/"
   - name: chartPath
-    value: '$(Build.SourcesDirectory)/charts/vh-${{ variables.git_repo_name }}'
+    value: "$(Build.SourcesDirectory)/charts/vh-${{ variables.git_repo_name }}"
   - name: envValuesPath
     value: "${{ variables.chartPath }}/values.${env}.yaml"
   - name: envValuesTemplatePath
@@ -68,7 +66,6 @@ variables:
 
   - name: gh_app_private_key_file_name
     value: hmcts-ado-cnp-app.private-key.pem
-
 
   - name: vhSQLServerName
     value: vh-infra-core-${{ parameters.env }}
