--- a/azure-pipelines.sds.pr-release.yml
+++ b/azure-pipelines.sds.pr-release.yml
@@ -39,11 +39,14 @@ stages:
         steps:
           - checkout: self
 
-          - template: stages\dotnet-tests\unit-and-integration-tests-container.yml@azTemplates
+          - template: templates/dotnet/build-test-analyse.yml@azTemplates
             parameters:
               nugetConfigPath: nuget.sds.config # remove this once the sds config file is removed
               appName: ${{ variables.appName }}
               dockerComposeTestFile: docker-compose.tests.yml
+              sonarExtraProperties: |
+                sonar.cs.opencover.reportsPaths=**/coverage.opencover.xml  
+                sonar.exclusions=**/UserApi/Swagger/**, **/Program.cs, **/Startup.cs, **/Testing.Common/**, **/UserApi.Common/**, **/UserApi.IntegrationTests/**, **/UserApi.UnitTests/**, **/UserApi/Helper/**, **/UserApi/ConfigureServicesExtensions.cs, **/UserApi/Extensions/**
 
   ####################################################
   # Pre Release Tasks. ###############################
